--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,39 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+nav {
+  padding: 1rem 2rem;
+  background-color: blue;
+  color: #fff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.containerComponentCountry {
+  display: flex;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h4 {
+
+  font-size: 14px;
+  margin: 0;
+
+}
+
+.containerPaysLink {
+  width: 14rem;
+  height: 5rem;
+  margin-left: 5rem;
+  border: 1px solid rgba(128, 128, 128, 0.263);
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  gap: 1rem;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.containerPaysLink:hover {
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+background-color: rgba(198, 198, 198, 0.273);
+
 }
